Fix BCHABC/BCHSV trading pair spacing

--- a/app/assets/stylesheets/pages/exchanges.scss
+++ b/app/assets/stylesheets/pages/exchanges.scss
@@ -120,7 +120,7 @@ input {
 }
 
 .single-pair {
-  width: 4em;
+  width: 5em;
 }
 
 .current_league a {
